--- a/Fire_Blog_Project/templates/App_Blog/blog_details.html
+++ b/Fire_Blog_Project/templates/App_Blog/blog_details.html
@@ -1,6 +1,19 @@
 {% extends 'base.html' %}
-{% block title_block %} {% endlock %}
-{% block body_block %} 
+{% block title_block %} {{blog.blog_title}} {% endblock %}
+{% block body_block %}
+<div class="row">
+  <div class="col-sm-6">
+    <h2> {{ blog.blog_title }}</h2>
+    <h4>Posted By: @{{blog.author}}</h4>
+    <i><h6>PUblilshed On: {{blog.publish_date}}</h6></i>
+    <i><h6>Updated On: {{blog.update_date}}</h6></i>
+  </div>
+  <div class="col-sm-6">
+    <img src="/media/{{blog.blog_image}}" width="90%" height="350px" >
+  </div>
+  <p>
+    {{blog.blog_content|linebreaks}}
+  </p>
+</div>
 
-
-{% endlock %}
+{% endblock %}
