--- a/Fire_Blog_Project/templates/App_Blog/edit_blog.html
+++ b/Fire_Blog_Project/templates/App_Blog/edit_blog.html
@@ -1,6 +1,14 @@
 {% extends 'base.html' %}
-{% block title_block %} {% endlock %}
-{% block body_block %} 
-
-
-{% endlock %}
+{% load crispy_forms_tags %}
+{% block title_block %} {{blog.blog_title}} {% endblock %}
+{% block body_block %}
+{% if blog.author == user %}
+<form method="POST">
+{{form|crispy}}
+{% csrf_token %}
+<button type="submit" name="button">Update</button>
+{% else %}
+<p>Your are not allowed to view this page. 404</p>
+</form>
+{% endif %}
+{% endblock %}
