--- a/Fire_Blog_Project/templates/base.html
+++ b/Fire_Blog_Project/templates/base.html
@@ -15,7 +15,7 @@
   <title>{% block title_block %} Blogs {% endblock %}</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  {% comment %} <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
     <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" href="{% url 'index' %}"><img src="/media/logo.png" width="60px"></a>
@@ -43,6 +43,70 @@
       {% endif %}
     </ul>
   </nav>
+ {% endcomment %}
+
+
+
+
+ <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="nav-link" href="{% url 'index' %}"><img src="/media/logo.png" width="60px"></a>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="{% url 'index' %}">Home </a>
+      </li>
+
+      {% if user.is_authenticated %}
+
+      <li class="nav-item ">
+        <a class="nav-link badge badge-success text-white"  href="#">Welcome {{user.username}}</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'App_Blog:create_blog' %}">Write Blog</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'App_Blog:my_blogs' %}">My Blogs</a> 
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'App_Login:profile' %}">Your Profile</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'App_Login:logout' %}">Logout</a>
+      </li>
+
+      {% else %}
+
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'App_Login:login' %}">Write Blog</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'App_Login:login' %}">My Blogs</a> 
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'App_Login:login' %}">Your Profile</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="{% url 'App_Login:signup' %}">Sign Up</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'App_Login:login' %}">Login</a>
+      </li>
+
+      {% endif %}
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
+
+
+
+
+
+
   <div class="container" style="padding-top:20px">
     {% block body_block %}
 
